--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,24 @@
-click==*
+astroid==2.4.2
+autopep8==1.5.4
+boto3==1.15.6
+botocore==1.18.6
+cli-news==0.0.1
+click==7.1.2
+clinews==0.0.1
+colorama==0.4.3
+halo==0.0.30
+isort==5.5.3
+jmespath==0.10.0
+lazy-object-proxy==1.4.3
+log-symbols==0.0.14
+mccabe==0.6.1
+pycodestyle==2.6.0
+pylint==2.6.0
+python-dateutil==2.8.1
+s3transfer==0.3.3
+six==1.15.0
+spinners==0.0.24
+termcolor==1.1.0
+toml==0.10.1
+urllib3==1.25.10
+wrapt==1.12.1
